testsuite/tests/typecheck/should_fail/T7869.stderr

T7869.hs:3:12: error:
    Couldn't match type ‘a0’ with ‘a’
      because type variable ‘a’ would escape its scope
    This (rigid, skolem) type variable is bound by
      an expression type signature: [a] -> b
      at T7869.hs:3:5-27
    Expected type: [a] -> b
      Actual type: [a0] -> b0
    Relevant bindings include
      x :: [a] (bound at T7869.hs:3:7)
      f :: [a0] -> b0 (bound at T7869.hs:3:1)
    In the expression: f x
    In the expression: (\ x -> f x) :: [a] -> b
    In an equation for ‘f’: f = (\ x -> f x) :: [a] -> b

T7869.hs:3:12: error:
    Couldn't match type ‘b0’ with ‘b’
      because type variable ‘b’ would escape its scope
    This (rigid, skolem) type variable is bound by
      an expression type signature: [a] -> b
      at T7869.hs:3:5-27
    Expected type: [a] -> b
      Actual type: [a0] -> b0
    Relevant bindings include f :: [a0] -> b0 (bound at T7869.hs:3:1)
    In the expression: f x
    In the expression: (\ x -> f x) :: [a] -> b
    In an equation for ‘f’: f = (\ x -> f x) :: [a] -> b
